Fixed overflow to overflow-y scroll error to be more attractive CSS

--- a/frontend/components/Album/index.css
+++ b/frontend/components/Album/index.css
@@ -4,6 +4,7 @@
     grid-template-rows: 50px 1fr; 
     width: 100vw;
     height: calc(100vh - 100px);
+    overflow-y: scroll;
     grid-template-areas:
     " sidebar    .             .              .      .   "
     " sidebar    .    album__information    tracks   .   ";
