--- a/frontend/components/Artist/index.css
+++ b/frontend/components/Artist/index.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 230px 50px 400px 1fr 75px;
     grid-template-rows: 50px 75px 60px 40px 100px 210px 30px 50px 400px 25px;
-    overflow: scroll;
+    overflow-y: scroll;
     width: 100vw;
     height: calc(100vh - 100px);
     grid-template-areas:
