--- a/frontend/components/Home/albums/index.css
+++ b/frontend/components/Home/albums/index.css
@@ -4,7 +4,7 @@
     grid-template-rows: 100px 1fr; 
     width: 100vw;
     height: calc(100vh - 100px);
-    overflow: scroll;
+    overflow-y: scroll;
     grid-template-areas:
     " sidebar  header  header  header  "
     " sidebar    .    albums    .     ";
